--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
@@ -27,6 +28,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
     "razorpay": "^2.9.2",
     "route": "^0.2.5",
     "sharp": "^0.33.2"
